# Agentic-RAG-System-for-Complex-PDFs

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/source_pdf/: put_pdfs_here.txt
docs/: README.md  api_retrieval_development_notes.md  chunk_anomaly_report.md  development_plan.md  generic_pdf_agentic_rag_design.md  project_optimization_backlog.md
docs/analysis/: chunk_anomaly_report.md  current_implementation_review.md  current_rag_gap_analysis.md  project_optimization_backlog.md
docs/development/: agentic_workflow_design.md  api_retrieval_development_notes.md  development_plan.md  frontend_design.md  minimal_refactor_evolution_plan.md  minimal_refactor_task_table.md  multiturn_context_upgrade_plan.md  multiturn_phase1_phase2_task_breakdown.md  page_template_classification_design.md
docs/guides/: minimal_system_guide.md
scripts/: ask.ps1  ask_agentic.ps1  smoke_test_api.ps1  start_api.ps1  start_frontend.ps1
src/: __init__.py
src/api/: app.py  run.py  smoke_test.py
src/chunking/: __init__.py  chunker.py  rules.py
src/config/: settings.py
src/diagnostics/: __init__.py  chunk_audit.py
src/domain/: __init__.py
src/entity_resolution/: __init__.py  base.py  rule_resolver.py  types.py
src/frontend/: __init__.py  app.py  controller.py  factory.py  run.py  state.py
src/generation/: __init__.py  agentic_qa_service.py  answer_generator.py  citation_auditor.py  cli.py  factory.py  qa_service.py  response_builder.py
src/graph/: cli.py  route_rules.py  router.py  workflow.py
src/indexing/: __init__.py  cli.py  (+5 more)
(+88 files in other folders)
